--- a/yasb/config.yaml
+++ b/yasb/config.yaml
@@ -1,7 +1,6 @@
 watch_stylesheet: true
 watch_config: true
 debug: false
-update_check: true
 komorebi:
   start_command: "komorebic start --whkd"
   stop_command: "komorebic stop --whkd"
@@ -9,21 +8,17 @@ komorebi:
 bars:
   primary-bar:
     enabled: true
-    screens: ["*"]
+    screens: ['*'] 
     class_name: "yasb-bar"
     alignment:
       position: "top"
-      center: false
-    animation:
-      enabled: true
-      duration: 400
+      center: true
     blur_effect:
-      enabled: true
-      acrylic: false
+      enabled: true 
+      acrylic: true 
       dark_mode: true
-      round_corners: true
-      round_corners_type: "normal"
-      border_color: "None"
+      round_corners: false
+      border_color: None
     window_flags:
       always_on_top: false
       windows_app_bar: true
@@ -31,311 +26,84 @@ bars:
       width: "100%"
       height: 32
     padding:
-      top: 4
-      left: 4
-      bottom: 4
-      right: 4
+      top: 0
+      left: 0
+      bottom: 0
+      right: 0
     widgets:
-      left: 
-      - "home"
-      - "glazewm_tiling_direction"
-      - "glazewm_workspaces"
-      - "disk"
-      center:
-      - "clock"
-      right:
-      - "systray"
-      - "grouped_widgets"
-      - "media"
-      - "volume"
-      - "notifications"
-      - "power_menu"
+      left: [
+          "home", 
+          "glazewm_workspaces", 
+          "active_window",
+      ]
+      center: [
+          "clock",
+        ]
+      right: [
+          "memory",
+          "disk",
+          "weather",
+          "wifi",
+          "volume",
+          "battery",
+          "power_menu"
+      ]
 widgets:
-  media:
-    type: "yasb.media.MediaWidget"
-    options:
-      label: "{title} - {artist}"
-      label_alt: "{title}"
-      hide_empty: true
-      callbacks:
-        on_left: "toggle_media_menu"
-        on_middle: "toggle_play_pause"
-        on_right: "toggle_label"
-      max_field_size:
-        label: 16
-        label_alt: 16
-      show_thumbnail: true
-      controls_only: false
-      controls_left: false
-      controls_hide: true
-      thumbnail_edge_fade: true
-      thumbnail_padding: 32
-      scrolling_label:
-        enabled: true
-        update_interval_ms: 50
-        style: "left"
-        separator: " "
-        label_padding: 2
-        ease_slope: 20
-        ease_pos: 0.8
-        ease_min: 0.5
-      icons:
-        prev_track: "\ue892"
-        next_track: "\ue893"
-        play: "\ue768"
-        pause: "\ue769"
-      media_menu:
-        blur: true
-        round_corners: true
-        round_corners_type: "normal"
-        border_color: "None"
-        alignment: "right"
-        direction: "down"
-        offset_top: 6
-        offset_left: 0
-        thumbnail_corner_radius: 4
-        thumbnail_size: 80
-        max_title_size: 60
-        max_artist_size: 20
-        show_source: true
-      media_menu_icons:
-        play: "\ue768"
-        pause: "\ue769"
-        prev_track: "\ue892"
-        next_track: "\ue893"
-  language:
-    type: "yasb.language.LanguageWidget"
-    options:
-      label: "<span>\uf11c</span> {lang[country_code]}"
-      label_alt: "{lang[full_name]}"
-      update_interval: 5
-      callbacks:
-        on_left: "toggle_menu"
-        on_middle: "do_nothing"
-        on_right: "toggle_label"
-      language_menu:
-        blur: true
-        round_corners: true
-        round_corners_type: "normal"
-        border_color: "None"
-        alignment: "right"
-        direction: "down"
-        offset_top: 6
-        offset_left: 0
-        show_layout_icon: true
-        layout_icon: "\uf11c"
-      container_padding:
-        top: 0
-        left: 2
-        bottom: 0
-        right: 2
-  memory:
-    type: "yasb.memory.MemoryWidget"
-    options:
-      label: "MEM"
-      label_alt: "VIRT: {virtual_mem_percent}% SWAP: {swap_mem_percent}%"
-      update_interval: 5000
-      progress_bar:
-        enabled: true
-        size: 14
-        thickness: 2
-        color: "#91d7e3"
-        background_color: "#242739" 
-      callbacks:
-        on_left: "toggle_label"
-      memory_thresholds:
-        low: 25
-        medium: 50
-        high: 90
-  cpu:
-    type: "yasb.cpu.CpuWidget"
-    options:
-      label: "CPU"
-      label_alt: "CPU {info[percent][total]:.0f}%"
-      progress_bar:
-        enabled: true
-        position: "left"
-        size: 14
-        thickness: 2
-        color: "#91d7e3"
-        background_color: "#242739" 
-      update_interval: 2000
-      callbacks:
-        on_right: "do_nothing"
-  systray:
-    type: "yasb.systray.SystrayWidget"
-    options:
-      class_name: "systray"
-      label_collapsed: "\uf47d"
-      label_expanded: "\uf460"
-      label_position: "right"
-      icon_size: 16
-      pin_click_modifier: "alt"
-      show_unpinned: false
-      show_unpinned_button: true
-      show_battery: false
-      show_volume: false
-      show_network: false
-      tooltip: true
   home:
     type: "yasb.home.HomeWidget"
     options:
-      label: "<span>\uf192</span>"
+      label: "<span>\udb80\udf5c</span>"
       menu_list:
-      - { title: "User Home", path: "~" }
-      - { title: "Download", path: "~\\Downloads" }
-      - { title: "Documents", path: "~\\Documents" }
-      - { title: "Pictures", path: "~\\Pictures" }
+        - { title: "Home", path: "~" }
+        - { title: "Downloads", path: "~\\Downloads"}
+        - { title: "Documents", path: "~\\Documents"}
+        - { title: "Pictures", path: "~\\Pictures"}
+        - { title: "Videos", path: "~\\Videos"}
       system_menu: true
-      power_menu: true
+      power_menu: false
       blur: true
-      border_color: "None"
-      container_padding:
-        top: 0
-        left: 6
-        bottom: 0
-        right: 4
-  clock:
-    type: "yasb.clock.ClockWidget"
+      round_corners: true
+      round_corners_type: "small"
+      border_color: "#7aa2f7"
+      alignment: "left"
+      offset_left: 4
+      offset_top: 0
+  glazewm_workspaces:
+    type: "glazewm.workspaces.GlazewmWorkspacesWidget"
     options:
-      label: "{%H:%M:%S}"
-      label_alt: "{%A, %d %B %Y %H:%M}"
-      timezones: []
-      calendar: 
-        blur: true
-        round_corners: true
-        round_corners_type: "normal"
-        border_color: "None"
-        alignment: "center"
-        direction: "down"
-      callbacks:
-        on_left: "toggle_calendar"
-        on_right: "toggle_label"
+      offline_label: "GlazeWM Offline"
+      hide_empty_workspaces: true
+      hide_if_offline: true
   komorebi_workspaces:
     type: "komorebi.workspaces.WorkspaceWidget"
     options:
-      label_offline: "\u23fc Offline"
-      label_workspace_btn: "\udb80\udd30"
-      label_workspace_active_btn: "\udb80\udd2f"
-      label_workspace_populated_btn: "\udb80\udd30"
-      label_default_name: "{index}"
-      label_zero_index: false
-      hide_empty_workspaces: false
+      label_offline: "KomorebiWM Offline"
+      hide_empty_workspaces: true
       hide_if_offline: true
-      animation: false
-  volume:
-    type: "yasb.volume.VolumeWidget"
+  memory:
+    type: "yasb.memory.MemoryWidget"
     options:
-      label: "<span>{icon}</span> {level}"
-      label_alt: "{level}"
-      volume_icons:
-        - "\ueee8"
-        - "\uf026"
-        - "\uf027"
-        - "\uf027"
-        - "\uf028"
+      label: "<span>\uf4bc</span> {virtual_mem_outof}"
+      label_alt: "<span>\uf4bc</span> {virtual_mem_outof}"
+      update_interval: 10000
       callbacks:
-        on_left: "toggle_volume_menu"
-        on_right: "toggle_mute"
-      audio_menu:
-        blur: true
-        round_corners: true
-        round_corners_type: "normal"
-        border_color: "None"
-        alignment: "center"
-        direction: "down"
-        offset_top: 6
-        offset_left: 0
-      container_padding:
-        top: 0
-        left: 2
-        bottom: 0
-        right: 2
-  power_menu:
-    type: "yasb.power_menu.PowerMenuWidget"
+        on_right: "exec cmd /c Taskmgr"
+  disk:
+    type: "yasb.disk.DiskWidget"
     options:
-      label: "\uf011"
-      uptime: true
-      blur: false
-      blur_background: true
-      animation_duration: 200
-      button_row: 3
-      buttons:
-        shutdown: ["\uf011", "Shut Down"]
-        restart: ["\uead2", "Restart"]
-        signout: ["\udb80\udf43", "Sign out"]
-        hibernate: ["\uf28e", "Hibernate"]
-        sleep: ["\u23fe", "Sleep"]
-        cancel: ["\ueab8", "Close"]
-      container_padding:
-        top: 0
-        left: 0
-        bottom: 0
-        right: 6
-  notifications:
-    type: "yasb.notifications.NotificationsWidget"
-    options:
-      label: "<span>\uf476</span> {count}"
-      label_alt: "{count} notifications"
-      hide_empty: true
-      tooltip: false
-      callbacks:
-        on_left: "toggle_notification"
-        on_right: "do_nothing"
-        on_middle: "toggle_label"
-      container_padding:
-        top: 0
-        left: 4
-        bottom: 0
-        right: 4
-  weather:
-    type: "yasb.weather.WeatherWidget"
-    options:
-      label: "<span>{icon}</span> {temp}"
-      label_alt: "{location}: Min {min_temp}, Max {max_temp}, Humidity {humidity}"
-      api_key: "$Env:YASB_WEATHER_API_KEY"
-      location: "$Env:YASB_WEATHER_LOCATION"
-      show_alerts: true
-      update_interval: 600
-      hide_decimal: true
-      units: "metric"
-      icons:
-        sunnyDay: "\ue30d"
-        clearNight: "\ue32b"
-        cloudyDay: "\ue312"
-        cloudyNight: "\ue311"
-        rainyDay: "\ue308"
-        rainyNight: "\ue333"
-        snowyIcyDay: "\ue30a"
-        snowyIcyNight: "\ue335"
-        blizzardDay: "\udb83\udf36"
-        blizzardNight: "\udb83\udf36"
-        foggyDay: "\ue303"
-        foggyNight: "\ue346"
-        thunderstormDay: "\ue30f"
-        thunderstormNight: "\ue338"
-        default: "\uebaa"
-      callbacks:
-        on_left: "toggle_card"
-        on_middle: "do_nothing"
-        on_right: "toggle_label"
-      weather_card:
-        blur: true
-        round_corners: true
-        round_corners_type: "normal"
-        border_color: "None"
-        alignment: "right"
-        direction: "down"
-        icon_size: 64
-        show_hourly_forecast: true
-        time_format: "24h"
-        hourly_point_spacing: 76
-        hourly_icon_size: 32
-        icon_smoothing: true
-        temp_line_width: 2
-        current_line_color: "#8EAEE8"
-        current_line_width: 2
-        current_line_style: "dot"
+        label: "<span>\uf473</span> disks"
+        label_alt: "<span>\uf473</span>"
+        group_label:
+          volume_labels: ["C", "D", "E", "F", "G", "H", "I", "J", "K", "L", "M", "N", "O", "P", "Q", "R", "S", "T", "U", "V", "W", "X", "Y", "Z"]
+          show_label_name: false 
+          blur: true
+          round_corners: true
+          round_corners_type: "small"
+          border_color: '#7aa2f7'
+          alignment: 'center'
+          offset_top: 0
+        callbacks:
+          on_left: "toggle_group"
   active_window:
     type: "yasb.active_window.ActiveWindowWidget"
     options:
@@ -343,91 +111,117 @@ widgets:
       label_alt: "[class_name='{win[class_name]}' exe='{win[process][name]}' hwnd={win[hwnd]}]"
       label_no_window: ""
       label_icon: true
-      label_icon_size: 16
-      max_length: 36
+      label_icon_size: 14
+      max_length: 50
       max_length_ellipsis: "..."
-      monitor_exclusive: false
-  grouped_widgets:
-    type: "yasb.grouper.GrouperWidget"
+      monitor_exclusive: true
+  clock:
+    type: "yasb.clock.ClockWidget"
     options:
-      class_name: "grouped-widgets"
-      widgets: [
-        "memory",
-        "cpu",
-        "weather",
+      label: "<span>\uf017</span>{%H:%M}"
+      label_alt: "<span>\uf017</span>{%A, %B %d. %Y %H:%M}"
+      locale: "hu_HU"
+      timezones: []
+      calendar:
+        round_corners: true
+        round_corners_type: "small"
+        border_color: "#7aa2f7"
+        alignment: "center"
+        offset_top: 0
+  weather:
+    type: "yasb.weather.WeatherWidget"
+    options:
+      label: "<span>{icon}</span> {temp}"
+      label_alt: "{location}: {conditions}, Min {min_temp}, Max {max_temp}, Humidity {humidity}"
+      api_key: '24b6c2cda6d84066b0304531241908'
+      update_interval: 600
+      hide_decimal: true
+      location: "Hungary, Eger"
+      units: "metric"
+      callbacks:
+        on_left: "toggle_card"
+      icons:
+        sunnyDay: "\udb81\udd99"
+        clearNight: "\ue3c2"
+        cloudyDay: "\ue21d"
+        cloudyNight: "\ue226"
+        rainyDay: "\ue371"
+        rainyNight: "\ue371"
+        snowyIcyDay: "\udb81\udf17"
+        snowyIcyNight: "\udb81\udf17"
+        blizzardDay: "\udb81\udd99"
+        default: "\udb81\udd99"
+      weather_card:
+        blur: true
+        round_corners: true
+        round_corners_type: "small"
+        border_color: "#7aa2f7"
+        alignment: "center"
+        direction: "down"
+        offset_top: 0
+        icon_size: 48
+  wifi:
+    type: "yasb.wifi.WifiWidget"
+    options:
+      label: "<span>{wifi_icon}</span> {wifi_strength}%"
+      label_alt: "<span>{wifi_icon}</span> {wifi_name} {wifi_strength}%"
+      ethernet_label: "<span>{wifi_icon}</span>"
+      ethernet_label_alt: "<span>{wifi_icon}</span> {wifi_name}"
+      ethernet_icon: "\uf108"
+      update_interval: 5000
+      callbacks:
+        on_left: "exec quick_settings"
+        on_middle: "do_nothing"
+        on_right: "toggle_label"
+      wifi_icons: [
+        "\udb82\udd2e",  # Icon for 0% strength
+        "\udb82\udd1f",  # Icon for 1-20% strength
+        "\udb82\udd22",  # Icon for 21-40% strength
+        "\udb82\udd25",  # Icon for 41-80% strength
+        "\udb82\udd28"   # Icon for 81-100% strength
       ]
-      container_padding:
-        top: 0
-        left: 2
-        bottom: 0
-        right: 6
-
-  glazewm_tiling_direction:
-    type: "glazewm.tiling_direction.GlazewmTilingDirectionWidget"
+  volume:
+    type: "yasb.volume.VolumeWidget"
     options:
-      horizontal_label: "\udb81\udce1"
-      vertical_label: "\udb81\udce2"
-      btn_shadow:
-        enabled: true
-        color: "black"
-        radius: 3
-        offset: [ 1, 1 ]
-
-  glazewm_workspaces:
-    type: "glazewm.workspaces.GlazewmWorkspacesWidget"
+      label: "<span>{icon}</span> {level}"
+      label_alt: "{volume}"
+      volume_icons:
+        - "\ueee8"  # Icon for muted
+        - "\uf026"  # Icon for 0-10% volume
+        - "\uf027"  # Icon for 11-30% volume
+        - "\uf027"  # Icon for 31-60% volume
+        - "\uf028"  # Icon for 61-100% volume
+      audio_menu:
+        blur: true
+        round_corners: true
+        round_corners_type: "small"
+        border_color: "#7aa2f7"
+        alignment: "center"
+        direction: "down"
+        offset_top: 0
+      callbacks:
+        on_right: "toggle_mute"
+  battery:
+    type: "yasb.battery.BatteryWidget"
     options:
-      offline_label: "GlazeWM Offline"
-      hide_empty_workspaces: true
-      hide_if_offline: false
-      enable_scroll_switching: true
-      btn_shadow:
-        enabled: true
-        color: "black"
-        radius: 3
-        offset: [ 1, 1 ]
-      app_icons: 
-        enabled_populated: false
-        enabled_active: false
-        size: 16
-        max_icons: 0
-        hide_label: false
-        hide_duplicates: false
-        hide_floating: false
-      animation: false
-
-      # By default workspace names are fetched from GlazeWM and "display_name" option takes priority over "name".
-      # However, you can customize populated and empty labels here using {name} and {display_name} placeholders if needed.
-      # {name} will be replaced with workspace name (index) from GlazeWM.
-      # {display_name} will be replaced with workspace display_name from GlazeWM.
-
-      # populated_label: "{name} {display_name} \uebb4"
-      # empty_label: "{name} {display_name} \uebb5"
-  disk:
-    type: "yasb.disk.DiskWidget"
+      label: "<span>{icon}</span>{percent}%"
+      label_alt: "<span>{icon}</span> {percent}% | time: {time_remaining}"
+      #hide_unsupported: true
+      charging_options:
+        icon_format: "{charging_icon}" 
+  power_menu:
+    type: "yasb.power_menu.PowerMenuWidget"
     options:
-        label: "{volume_label} {space[used][percent]}"
-        label_alt: "{volume_label} {space[used][gb]} / {space[total][gb]}"
-        volume_label: "C"
-        update_interval: 60
-        group_label:
-          volume_labels: ["C", "D", "E", "F"]
-          show_label_name: true
-          blur: True
-          round_corners: True
-          round_corners_type: "small"
-          border_color: "System"
-          alignment: "right"
-          direction: "down"
-        callbacks:
-          on_left: "toggle_group"
-          on_middle: "toggle_label"
-          on_right: "exec explorer C:\\" # Open disk C in file explorer
-        label_shadow:
-          enabled: true
-          color: "black"
-          radius: 3
-          offset: [ 1, 1 ]
-        disk_thresholds:
-            low: 25
-            medium: 50
-            high: 90
+      label: "\uf011"
+      uptime: True
+      blur: False
+      blur_background: True
+      animation_duration: 200
+      button_row: 5
+      buttons:
+        shutdown: ["\uf011", "Shut Down"]
+        restart: ["\uead2", "Restart"]
+        signout: ["\udb80\udf43", "Sign out"]
+        hibernate: ["\uf28e", "Hibernate"]
+        sleep: ["\u23fe", "Sleep"]
+        cancel: ["", "Cancel"]
