--- a/fastfetch/config.jsonc
+++ b/fastfetch/config.jsonc
@@ -5,158 +5,133 @@
       "top": 2,
       // "left": 2
     },
-    "source": "C://Users//kunwa//Downloads//btc-mechanics-ordinals.gif",
+    "source": "C://Users//kunwa//.config//fastfetch//logs_gifs//btc-mechanics-ordinals.gif",
     "type": "iterm",
-    "width": 32
+    "width": 40
   },
 	"display": {
 		"separator": "  "
 	},
-	"modules": [
-		{
-			"type": "title",
-			"key": "迷えば敗れる",
-			"keyColor": "blue"
-		},
-		"break",
-		{
-			"type": "os",
-			"key": "╭─󰯉",
-			"keyColor": "magenta"
-		},
-		{
-			"type": "kernel",
-			"key": "├─",
-			"format": "{1} {2}",
-			"keyColor": "magenta"
-		},
-		{
-			"type": "packages",
-			"key": "├─󰮯",
-			"keyColor": "magenta"
-		},
-		{
-			"type": "de",
-			"key": "├─",
-			"keyColor": "magenta"
-		},
-		{
-			"type": "wm",
-			"key": "├─",
-			"keyColor": "magenta"
-		},
-		{
-			"type": "lm",
-			"key": "├─󰧨",
-			"keyColor": "magenta"
-		},
-		{
-			"type": "theme",
-			"key": "├─󰉼",
-			"keyColor": "magenta"
-		},
-		{
-			"type": "icons",
-			"key": "╰─󰀻",
-			"keyColor": "magenta"
-		},
-		"break",
-		// One entry for every partition
-		// {
-		// 	"type": "disk",
-		// 	"key": "├─",
-		// 	"keyColor": "green"
-		// },
-		// {
-		// 	"type": "brightness",
-		// 	"key": "├─󰃞",
-		// 	"keyColor": "green"
-		// },
-		// {
-		// 	"type": "battery",
-		// 	"key": "├─",
-		// 	"keyColor": "green"
-		// },
-		// {
-		// 	"type": "poweradapter",
-		// 	"key": "├─",
-		// 	"keyColor": "green"
-		// },
-		// {
-		// 	"type": "gamepad",
-		// 	"key": "├─",
-		// 	"keyColor": "green"
-		// },
-		// {
-		// 	"type": "bluetooth",
-		// 	"key": "├─",
-		// 	"keyColor": "green"
-		// },
-		// {
-		// 	"type": "sound",
-		// 	"key": "╰─",
-		// 	"keyColor": "green"
-		// },
-		{
-			"type": "terminal",
-			"key": "╭─",
-			"keyColor": "green"
-		},
-		{
-			"type": "terminalfont",
-			"key": "├─",
-			"keyColor": "green"
-		},
-		{
-			"type": "shell",
-			"key": "╰─",
-			"keyColor": "green"
-		},
-		"break",
-		{
-			"type": "host",
-			"key": "╭─",
-			"keyColor": "yellow"
-		},
-		{
-			"type": "cpu",
-			"key": "├─󰍛",
-			"keyColor": "yellow"
-		},
-		{
-			"type": "gpu",
-			"key": "├─󰘚",
-			"keyColor": "yellow"
-		},
-		{
-			"type": "display",
-			"key": "├─󰍹",
-			"keyColor": "yellow"
-		},
-		// {
-		// 	"type": "wallpaper",
-		// 	"key": "╰─󰸉",
-		// 	"keyColor": "yellow"
-		// },
-		{
-			"type": "memory",
-			"key": "├─󰑭",
-			"keyColor": "yellow"
-		},
-		// {
-		// 	"type": "swap",
-		// 	"key": "├─󰓡",
-		// 	"keyColor": "yellow"
-		// },
-		{
-			"type": "uptime",
-			"key": "╰─󰅐",
-			"keyColor": "yellow"
-		}
-	//	"break",
-	//	{ 
-	//		"type": "custom",
-	//		"format": "\u001b[1m\u001b[31m  \u001b[1m\u001b[32m  \u001b[1m\u001b[33m  \u001b[1m\u001b[34m  \u001b[1m\u001b[35m  \u001b[1m\u001b[36m  \u001b[1m\u001b[37m  \u001b[1m\u001b[30m       \u001b[1m\u001b[91m  \u001b[1m\u001b[92m  \u001b[1m\u001b[93m  \u001b[1m\u001b[94m  \u001b[1m\u001b[95m  \u001b[1m\u001b[96m  \u001b[1m\u001b[97m  \u001b[1m\u001b[90m"
-	//	} 
-	]
+"modules": [
+      "break",
+      {
+          "type": "custom",
+          "format": "\u001b[90m┌──────────────────────Hardware──────────────────────┐"
+      },
+      {
+          "type": "host",
+          "key": " PC",
+          "keyColor": "green"
+      },
+      {
+          "type": "cpu",
+          "key": "│ ├",
+          "keyColor": "green"
+      },
+      {
+          "type": "gpu",
+          "key": "│ ├󰍛",
+          "keyColor": "green"
+      },
+      {
+          "type": "memory",
+          "key": "│ ├󰍛",
+          "keyColor": "green"
+      },
+      {
+          "type": "disk",
+          "key": "└ └",
+          "keyColor": "green"
+      },
+      {
+          "type": "custom",
+          "format": "\u001b[90m└────────────────────────────────────────────────────┘"
+      },
+      "break",
+      {
+          "type": "custom",
+          "format": "\u001b[90m┌──────────────────────Software──────────────────────┐"
+      },
+      {
+          "type": "os",
+          "key": " OS",
+          "keyColor": "yellow"
+      },
+      {
+          "type": "kernel",
+          "key": "│ ├",
+          "keyColor": "yellow"
+      },
+      {
+          "type": "bios",
+          "key": "│ ├",
+          "keyColor": "yellow"
+      },
+      {
+          "type": "shell",
+          "key": "└ └",
+          "keyColor": "yellow"
+      },
+      "break",
+      {
+          "type": "de",
+          "key": " DE",
+          "keyColor": "blue"
+      },
+      {
+          "type": "lm",
+          "key": "│ ├",
+          "keyColor": "blue"
+      },
+      {
+          "type": "wm",
+          "key": "│ ├",
+          "keyColor": "blue"
+      },
+      {
+          "type": "wmtheme",
+          "key": "│ ├󰉼",
+          "keyColor": "blue"
+      },
+      {
+          "type": "terminal",
+          "key": "└ └",
+          "keyColor": "blue"
+      },
+      {
+          "type": "custom",
+          "format": "\u001b[90m└────────────────────────────────────────────────────┘"
+      },
+      "break",
+      {
+          "type": "custom",
+          "format": "\u001b[90m┌────────────────────Uptime / Age / DT────────────────────┐"
+      },
+      {
+          "type": "command",
+          "key": "  OS Age ",
+          "keyColor": "magenta",
+          "text": "birth_install=$(stat -c %W /); current=$(date +%s); time_progression=$((current - birth_install)); days_difference=$((time_progression / 86400)); echo $days_difference days"
+      },
+      {
+          "type": "uptime",
+          "key": "  Uptime ",
+          "keyColor": "magenta"
+      },
+      {
+          "type": "datetime",
+          "key": "  DateTime ",
+          "keyColor": "magenta"
+      },
+      {
+          "type": "custom",
+          "format": "\u001b[90m└─────────────────────────────────────────────────────────┘"
+      },
+      {
+          "type": "colors",
+          "paddingLeft": 2,
+          "symbol": "circle"
+      }
+
+  ]
 }
