--- a/fastfetch/config.jsonc
+++ b/fastfetch/config.jsonc
@@ -2,136 +2,135 @@
 	"$schema": "https://github.com/fastfetch-cli/fastfetch/raw/dev/doc/json_schema.json",
   "logo": {
     "padding": {
-      "top": 2,
-      // "left": 2
+      "top": 1,
     },
     "source": "C://Users//kunwa//.config//fastfetch//logs_gifs//btc-mechanics-ordinals.gif",
     "type": "iterm",
-    "width": 40
+    "width": 22
   },
 	"display": {
 		"separator": "  "
 	},
-"modules": [
-      "break",
-      {
-          "type": "custom",
-          "format": "\u001b[90m┌──────────────────────Hardware──────────────────────┐"
-      },
-      {
-          "type": "host",
-          "key": " PC",
-          "keyColor": "green"
-      },
-      {
-          "type": "cpu",
-          "key": "│ ├",
-          "keyColor": "green"
-      },
-      {
-          "type": "gpu",
-          "key": "│ ├󰍛",
-          "keyColor": "green"
-      },
-      {
-          "type": "memory",
-          "key": "│ ├󰍛",
-          "keyColor": "green"
-      },
-      {
-          "type": "disk",
-          "key": "└ └",
-          "keyColor": "green"
-      },
-      {
-          "type": "custom",
-          "format": "\u001b[90m└────────────────────────────────────────────────────┘"
-      },
-      "break",
-      {
-          "type": "custom",
-          "format": "\u001b[90m┌──────────────────────Software──────────────────────┐"
-      },
-      {
-          "type": "os",
-          "key": " OS",
-          "keyColor": "yellow"
-      },
-      {
-          "type": "kernel",
-          "key": "│ ├",
-          "keyColor": "yellow"
-      },
-      {
-          "type": "bios",
-          "key": "│ ├",
-          "keyColor": "yellow"
-      },
-      {
-          "type": "shell",
-          "key": "└ └",
-          "keyColor": "yellow"
-      },
-      "break",
-      {
-          "type": "de",
-          "key": " DE",
-          "keyColor": "blue"
-      },
-      {
-          "type": "lm",
-          "key": "│ ├",
-          "keyColor": "blue"
-      },
-      {
-          "type": "wm",
-          "key": "│ ├",
-          "keyColor": "blue"
-      },
-      {
-          "type": "wmtheme",
-          "key": "│ ├󰉼",
-          "keyColor": "blue"
-      },
-      {
-          "type": "terminal",
-          "key": "└ └",
-          "keyColor": "blue"
-      },
-      {
-          "type": "custom",
-          "format": "\u001b[90m└────────────────────────────────────────────────────┘"
-      },
-      "break",
-      {
-          "type": "custom",
-          "format": "\u001b[90m┌────────────────────Uptime / Age / DT────────────────────┐"
-      },
-      {
-          "type": "command",
-          "key": "  OS Age ",
-          "keyColor": "magenta",
-          "text": "birth_install=$(stat -c %W /); current=$(date +%s); time_progression=$((current - birth_install)); days_difference=$((time_progression / 86400)); echo $days_difference days"
-      },
-      {
-          "type": "uptime",
-          "key": "  Uptime ",
-          "keyColor": "magenta"
-      },
-      {
-          "type": "datetime",
-          "key": "  DateTime ",
-          "keyColor": "magenta"
-      },
-      {
-          "type": "custom",
-          "format": "\u001b[90m└─────────────────────────────────────────────────────────┘"
-      },
-      {
-          "type": "colors",
-          "paddingLeft": 2,
-          "symbol": "circle"
-      }
-
-  ]
+	"modules": [
+		{
+			"type": "title",
+			"key": "迷えば敗れる",
+			"keyColor": "blue"
+		},
+		// "break",
+		{
+			"type": "os",
+			"key": "╭─󰯉",
+			"keyColor": "yellow"
+		},
+		{
+			"type": "kernel",
+			"key": "├─",
+			"format": "{1} {2}",
+			"keyColor": "yellow"
+		},
+		{
+			"type": "de",
+			"key": "├─",
+			"keyColor": "yellow"
+		},
+		{
+			"type": "lm",
+			"key": "├─󰧨",
+			"keyColor": "yellow"
+		},
+		// "break",
+		// One entry for every partition
+		// {
+		// 	"type": "disk",
+		// 	"key": "├─",
+		// 	"keyColor": "yellow"
+		// },
+		// {
+		// 	"type": "brightness",
+		// 	"key": "├─󰃞",
+		// 	"keyColor": "yellow"
+		// },
+		// {
+		// 	"type": "battery",
+		// 	"key": "├─",
+		// 	"keyColor": "yellow"
+		// },
+		// {
+		// 	"type": "poweradapter",
+		// 	"key": "├─",
+		// 	"keyColor": "yellow"
+		// },
+		// {
+		// 	"type": "gamepad",
+		// 	"key": "├─",
+		// 	"keyColor": "yellow"
+		// },
+		// {
+		// 	"type": "bluetooth",
+		// 	"key": "├─",
+		// 	"keyColor": "yellow"
+		// },
+		// {
+		// 	"type": "sound",
+		// 	"key": "╰─",
+		// 	"keyColor": "yellow"
+		// },
+		{
+			"type": "terminal",
+			"key": "├─",
+			"keyColor": "yellow"
+		},
+		{
+			"type": "terminalfont",
+			"key": "├─",
+			"keyColor": "yellow"
+		},
+		{
+			"type": "shell",
+			"key": "├─",
+			"keyColor": "yellow"
+		},
+		// "break",
+		{
+			"type": "host",
+			"key": "├─",
+			"keyColor": "yellow"
+		},
+		{
+			"type": "cpu",
+			"key": "├─󰍛",
+			"keyColor": "yellow"
+		},
+		{
+			"type": "gpu",
+			"key": "├─󰘚",
+			"keyColor": "yellow"
+		},
+		{
+			"type": "display",
+			"key": "├─󰍹",
+			"keyColor": "yellow"
+		},
+		// {
+		// 	"type": "wallpaper",
+		// 	"key": "╰─󰸉",
+		// 	"keyColor": "yellow"
+		// },
+		{
+			"type": "memory",
+			"key": "├─󰑭",
+			"keyColor": "yellow"
+		},
+		// {
+		// 	"type": "swap",
+		// 	"key": "├─󰓡",
+		// 	"keyColor": "yellow"
+		// },
+		{
+			"type": "uptime",
+			"key": "╰─󰅐",
+			"keyColor": "yellow"
+		},
+	]
 }
